@startuml
title Diagramme_de_Classe_Lampe

class Lampe{
    -nom : String
    -allumee : boolean

    +Lampe(String):
    +allumer(): boolean
    +eteindre(): boolean
    +toString(): String
}

interface Appareil{
    +allumer():
    +eteindre():
    +toString():String
}


class Telecommande{
    +Telecommande():
    +ajouterAppareil(Appareil):
    +activerAppareil(int):
    +desactiverAppareil(int):
    +activerTout():
    +toString(): String
}

class Television{
    -nom : String
    -allumee: boolean

    +Television(String):
    +allumer():
    +eteindre():
    +toString(): String
}

class Hifi{
    -son: int

    +allumer():
    +eteindre():
    +toString(): String
}
class Cheminee {
    +intensite: int
    
    +Cheminee(int):
    +changerIntensite():
    +getLumiere(): int
    +toString(): String
}
class AdapterCheminee{
    -cheminee: Cheminee

    +adapterCheminee(Cheminee):
    +allumer():
    +eteindre():
    +toString(): String
}
class Thermostat {
    +temperature: int

    +Thermostat(int):
    +changerTemperature():
    +getTemperature(): int
    +toString(): String
}
class AdapterThermostat{
    -thermostat: Thermostat

    +adapterThermostat(Thermostat)
    +allumer():
    +eteindre():
    +toString(): String
}

Lampe..|> Appareil
Hifi..|> Appareil
Telecommande-->"*"Appareil: -appareils
Television..|>Appareil
adapterCheminee..|> Appareil
adapterCheminee--|> Cheminee
adapterThermostat..|> Appareil
adapterThermostat--|> Thermostat

@enduml